Sidebar Image: Gooseberry Trailer !

--- a/blender-today/src/jade/_sidebar.jade
+++ b/blender-today/src/jade/_sidebar.jade
@@ -83,7 +83,7 @@
 
 		a(href="{{url_for('index')}}", title="Blender.Today")
 			img.nav-sidebar-mug(
-				src="{{url_for('static', filename='images/today_manumug_136x136.jpg')}}")
+				src="{{url_for('static', filename='images/today_manumug_gooseberry-trailer_136x136.png')}}")
 
 		a(href="{{url_for('index')}}")
 			h3.
