Always show categories dropdown (can fail, need to look into that)

--- a/blender-today/src/sass/main.sass
+++ b/blender-today/src/sass/main.sass
@@ -134,7 +134,7 @@ blockquote
 			margin: 0 5px
 
 	& select
-		display: none // so the select categories doesn't appear for a moment
+		//display: none // so the select categories doesn't appear for a moment
 
 		+media-xs
 			display: block
