--- a/blender-today/src/jade/_sidebar.jade
+++ b/blender-today/src/jade/_sidebar.jade
@@ -14,6 +14,7 @@
 
 				a(href="{{url_for_security('login')}}")
 					span.navbar-submit-disabled-overlay.popover-submit(
+							data-dialog="submit",
 							data-toggle="popover",
 							data-trigger="hover",
 							data-placement="bottom"
